# lamish-projection-engine

./: .gitignore  ADVANCED_FEATURES_SUMMARY.md  CHROMADB_INTEGRATION_NOTES.md  DATABASE_SETUP.md  ENHANCED_SYSTEM_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTERFACE_STATUS.md  JOB_SYSTEM_GUIDE.md  LICENSE  MULTI_PROVIDER_SETUP.md  Makefile  NEW_SESSION_BRIEFING.md  PROJECT_UPDATE.md  PYDEV_BRANCH_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  README_ADVANCED.md  SYSTEM_STATUS.md  admin_server.py  check_python.sh  chromadb_mcp_server.py  complete_setup.sh  content_models.py  database_setup.py  debug_ollama_list.py  demo.py  demo_full_flow.py  demo_maieutic.py  docker-compose.yml  enhanced_interface.py  enhanced_job_manager.py  environment.yml  example_maieutic_flow.py  finish_setup.sh  fix_and_test.sh  immediate_interface.py  install_llm_deps.sh  keychain_manager.py  language_config.py  (+48 more)
config/: language_style.json  namespace.json  persona.json
lamish_projection_engine/: __init__.py
lamish_projection_engine/cli/: __init__.py  commands.py  main.py
lamish_projection_engine/config/: __init__.py  dynamic_attributes.py
lamish_projection_engine/core/: __init__.py  database.py  enhanced_models.py  job_workers.py  jobs.py  llm.py  maieutic.py  models.py  projection.py  translation_roundtrip.py
lamish_projection_engine/tests/: test_setup.py
lamish_projection_engine/utils/: __init__.py  config.py
lamish_projection_engine/web/: __init__.py  app.py  websockets.py
scripts/: init_db.py  setup.sh
